--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
+    "start": "concurrently \"node server.js\" \"cd client && npm start\"",
     "postinstall": "cd client && npm i && npm run build"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Mshea424/GA-SEI-Project-3#readme",
   "dependencies": {
+    "@google-cloud/translate": "^5.3.0",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.15"
