--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"node server.js\" \"cd client && npm start\"",
+    "startlocal": "GOOGLE_APPLICATION_CREDENTIALS=key.json concurrently \"node server.js\" \"cd client && npm start\"",
     "postinstall": "cd client && npm i && npm run build"
   },
   "repository": {
