--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"node server.js\" \"cd client && npm start\"",
+    "start": "node server.js",
     "startlocal": "GOOGLE_APPLICATION_CREDENTIALS=key.json concurrently \"node server.js\" \"cd client && npm start\"",
     "postinstall": "cd client && npm i && npm run build"
   },
