--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.15"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
